--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,6 +1,6 @@
 .callout {
-    max-width: 40%;
-    margin: 5px ;
+    max-width: 400px;
+    margin: 1rem ;
     border: 3px;
     padding: 10px;
     background-color: #224476;
@@ -12,14 +12,17 @@
     margin: 20px;
     border: 3px solid #1e0f0a;
 	padding: 15px solid #bbbbbb;
-    width: 100;
+    width: 100px;
     height: auto;
 }
 
 blockquote {
-	
+	margin: 1em;
 }
 
 cite {
-	
+	display:block;
+    border-top: 1px dotted #fff;
+    padding-top: 0;
+    text-align:right;
 }
