--- a/week02/styles/styles.css
+++ b/week02/styles/styles.css
@@ -43,7 +43,7 @@ aside img {
 }
 footer {
     margin-top: 1em;
-    border-top: 1px soli #000;
+    border-top: 1px solid #000;
     clear:both;
     text-align: center;
     padding: 10px;
