--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
     --primary-color: #1E6091;
     --white: #fff;
     --secondary-color: #99D98C;
@@ -9,8 +9,11 @@
  * {
     margin:0;
     padding:0;
+    box-sizing: border-box;
     
  }
+
+
 
 body {
     font-family: 'Mulish', sans-serif;
@@ -135,4 +138,119 @@ footer p{
 }
 .sociallinks img{
     width:40px;
+}
+
+/* Contact */
+.container-c{
+    width:100%;
+    height:300px;
+    position: relative;
+    background-color: var(--primary-color);
+    color: var(--white);
+    
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap:1rem;
+}
+.container-c h1{
+    font-size: 2.5rem;
+}
+
+.container-h{
+    margin:60px auto 60px;
+    display:flex;
+    justify-content: center;
+}
+.container-h article{
+    width:30%;
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    row-gap: 20px;
+}
+.a{
+    display:grid;
+    grid-template-columns: 1fr 5fr; 
+    row-gap: 15px;
+}
+.a span{
+    display:flex;
+    justify-content: center;
+}
+
+.employee{
+    margin: 50px auto 60px;
+    width:90%;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items:center;
+
+}
+.employee img{
+    width:350px;
+    height:auto;
+}
+.employe article{
+    display:grid;
+    grid-template-columns: 1fr 4fr;
+    row-gap:0.5rem;
+}
+.employe h3{
+    font-size:2rem;
+    grid-column:1/3;
+}
+.employee span{
+    justify-self:center;
+}
+.form{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    background-color: #c6c6c6;
+    margin:70px auto 10px;
+    padding:4rem 2rem 4rem;
+}
+.form h2{
+    font-size: 2.5rem;
+    color: var(--primary-color)
+}
+form{
+    width: 650px;
+    margin: 0 auto;
+    padding: 1.5rem;
+    display:grid;
+    
+}
+label{
+    padding: 0.7rem;
+}
+input, textarea{
+    padding: 1.5rem;
+    font-size: 1.1rem;
+    border-radius:0.5rem;
+    border:none;
+}
+button{
+    margin:1rem;
+    background-color: var(--primary-color);
+    color:#fff;
+    border:none;
+    border-radius:5rem;
+    padding:1rem;
+    font-size: 1.2rem;
+    width:60%;
+    margin:0 auto;
+}
+button:hover {
+    background-color: darkgreen;
+}
+.container-form{
+    display:flex;
+    justify-content: center;
+    column-gap: 1.5rem;
+    align-items: center;
+
 }
